--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }} – {{ site.description }}</title>
 
     {% include meta.html %}
 
@@ -19,7 +19,7 @@
     {% endif %}
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css"/>
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}"
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}"
           href="{{ site.baseurl }}/feed.xml"/>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=PT+Serif:r%7CLibre+Baskerville:r,i,b,bi&amp;subset=latin,latin-ext,latin,latin-ext"
